# jqpy

./: .gitignore  README.md  jqpy.py  pyproject.toml
.github/workflows/: documentation.yml  python-app.yml  tests.yml
documentation/: conf.py  installation.md  jqpy.rst
documentation/_build/html/: .buildinfo  genindex.html  index.html  installation.html  jqpy.html  objects.inv  py-modindex.html  searchindex.js  sitemap.xml  tutorial.html
documentation/_build/html/_images/: inheritance-aeffb1c4891ad098ee38f74bb1214d3d17db6cbf.png.map
documentation/_build/html/_modules/: index.html  jqpy.html
documentation/_build/html/_sources/: index.rst.txt  tutorial.rst.txt
documentation/_build/html/_static/: sphinx_immaterial_theme.c145f3631d897b861.min.css
tests/: README.md  fetch_upstream.bat  fetch_upstream.sh  requirements.txt  runner.py  test_binding.py  test_upstream.py
tests/json_parser/: grammar.py  parser.py
tests/testfile_parser/: grammar.py  parser.py
